# english-lean

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  english-lean-gui.bat  english-lean-gui.command  pyproject.toml
data/vocab/: README.md  sample_cet4.json
docs/data/: SOURCES.md  cet4.md  kaoyan.md
docs/plan/: README.md  overview.md  roadmap.md  srs.md
docs/tasks/: README.md  tasks_01.md  tasks_02.md  tasks_03.md  tasks_04.md  tasks_05.md  tasks_06.md  tasks_07.md  tasks_08.md  tasks_09.md  tasks_10.md  tasks_11.md  tasks_12.md
src/english_lean/: __init__.py  __main__.py  main.py
src/english_lean/config/: __init__.py  study_scope.py  study_settings.py
src/english_lean/db/: __init__.py  connection.py  import_vocab.py  paths.py  schema.sql
src/english_lean/quiz/: __init__.py  validate.py
src/english_lean/repository/: __init__.py  progress.py  study_meta.py  words.py
src/english_lean/services/: __init__.py  queue_cluster.py  stats.py  study_queue.py
src/english_lean/session/: __init__.py  controller.py
src/english_lean/srs/: __init__.py  sm2.py
src/english_lean/tools/: __init__.py  import_cet4.py  import_kaoyan.py  seed.py
src/english_lean/ui/: __init__.py  card_widget.py  dictation_widget.py  main_window.py
src/english_lean/vocab/: __init__.py  (+2 more)
tests/: test_convert_cet4.py  test_convert_kaoyan.py  test_db_schema.py  test_import_vocab.py  test_queue_cluster.py  test_smoke.py  test_srs_sm2.py  test_stats.py  test_study_meta.py  test_study_queue.py  test_validate.py
tests/fixtures/: cet4_fragment.csv  kaoyan_fragment.json
tools/: ui_preview.py
(+2 files in other folders)
